# ref-esp-server

./: .gitignore  CMakeLists.txt  readme.md
front/: index.html  scripts.js
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  led.c  led.h  my_http.c  my_http.h  my_led.c  my_led.h  my_rest.c  my_rest.h  my_wifi.c  my_wifi.h  server.c  server_main.c  var.c  var.h
